[project]
name = "ezmsg-qt"
version = "0.1.0"
description = "Qt integration for ezmsg with direct topic-based pub/sub"
readme = "README.md"
requires-python = ">=3.10.15"
dependencies = [
  "ezmsg @ file:///Users/peranpl1/Documents/repos/oss/ezmsg",
  "qtpy>=2.4.1",
]

[project.optional-dependencies]
pyqt6 = ["pyqt6>=6.0.0"]
pyside6 = ["pyside6>=6.0.0"]
test = ["pytest>=7.0.0", "pytest-qt>=4.0.0"]

[tool.uv.sources]
ezmsg = { git = "https://github.com/ezmsg-org/ezmsg", branch = "dev" }

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true

[tool.pyright.defineConstant]
PYQT5 = false
PYSIDE2 = false
PYQT6 = true
PYSIDE6 = false

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "E",  # pycodestyle error
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "W",  # pycodestyle warning
]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ezmsg"]
